// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculator function testing Test managment of buttons 1`] = `
<button
  name="7"
  type="button"
>
  7
</button>
`;

exports[`calculator function testing calculator contains all buttons 1`] = `
<button
  name="AC"
  type="button"
>
  AC
</button>
`;

exports[`calculator function testing calculator contains all buttons 2`] = `
<button
  name="+/-"
  type="button"
>
  +/-
</button>
`;

exports[`calculator function testing calculator contains all buttons 3`] = `
<button
  name="%"
  type="button"
>
  %
</button>
`;

exports[`calculator function testing calculator contains all buttons 4`] = `
<button
  class="btn-warning"
  name="÷"
  type="button"
>
  ÷
</button>
`;

exports[`calculator function testing calculator contains all buttons 5`] = `
<button
  name="7"
  type="button"
>
  7
</button>
`;

exports[`calculator function testing calculator contains all buttons 6`] = `
<button
  name="8"
  type="button"
>
  8
</button>
`;

exports[`calculator function testing calculator contains all buttons 7`] = `
<button
  name="9"
  type="button"
>
  9
</button>
`;

exports[`calculator function testing calculator contains all buttons 8`] = `
<button
  class="btn-warning"
  name="x"
  type="button"
>
  x
</button>
`;

exports[`calculator function testing calculator contains all buttons 9`] = `
<button
  name="4"
  type="button"
>
  4
</button>
`;

exports[`calculator function testing calculator contains all buttons 10`] = `
<button
  name="5"
  type="button"
>
  5
</button>
`;

exports[`calculator function testing calculator contains all buttons 11`] = `
<button
  name="6"
  type="button"
>
  6
</button>
`;

exports[`calculator function testing calculator contains all buttons 12`] = `
<button
  class="btn-warning"
  name="-"
  type="button"
>
  -
</button>
`;

exports[`calculator function testing calculator contains all buttons 13`] = `
<button
  name="1"
  type="button"
>
  1
</button>
`;

exports[`calculator function testing calculator contains all buttons 14`] = `
<button
  name="2"
  type="button"
>
  2
</button>
`;

exports[`calculator function testing calculator contains all buttons 15`] = `
<button
  name="3"
  type="button"
>
  3
</button>
`;

exports[`calculator function testing calculator contains all buttons 16`] = `
<button
  class="btn-warning"
  name="+"
  type="button"
>
  +
</button>
`;

exports[`calculator function testing calculator contains all buttons 17`] = `
<button
  id="zero"
  name="0"
  type="button"
>
  0
</button>
`;

exports[`calculator function testing calculator contains all buttons 18`] = `
<button
  name="."
  type="button"
>
  .
</button>
`;

exports[`calculator function testing calculator contains all buttons 19`] = `
<button
  name="="
  type="button"
>
  =
</button>
`;

exports[`calculator function testing test 5 + 4 to equl 9 1`] = `
<button
  name="9"
  type="button"
>
  9
</button>
`;
